--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.3.24",
     "openai": "^4.54.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
