--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@mui/x-charts": "^7.12.1",
     "@nivo/bar": "^0.87.0",
     "@nivo/boxplot": "^0.87.0",
+    "@nivo/bullet": "^0.87.0",
     "@nivo/core": "^0.87.0",
+    "@nivo/line": "^0.87.0",
     "@nivo/pie": "^0.87.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
