--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nivo/boxplot": "^0.87.0",
     "@nivo/bullet": "^0.87.0",
     "@nivo/core": "^0.87.0",
+    "@nivo/heatmap": "^0.87.0",
     "@nivo/line": "^0.87.0",
     "@nivo/pie": "^0.87.0",
     "@testing-library/jest-dom": "^5.17.0",
