--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.24",
+    "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "openai": "^4.54.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
