--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
     "openai": "^4.54.0",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-papaparse": "^4.4.0",
